# acados-STM32

./: .gitmodules  LICENSE  README.md
CMakeBased/: CMakeLists.txt  README.md
CMakeBased/cfg/: openocd.cfg
CMakeBased/cmake/: acados.cmake  arm-none-eabi-gcc.cmake
CMakeBased/src/: main.c  stm32h7xx_hal_msp.c  sysmem.c
CMakeBased/src/c_generated_code/: acados_sim_solver_pendulum_ode.c  acados_sim_solver_pendulum_ode.h  acados_solver_pendulum_ode.c  main_pendulum_ode.c
CMakeBased/src/c_generated_code/pendulum_ode_model/: pendulum_ode_expl_vde_adj.c  pendulum_ode_expl_vde_forw.c  pendulum_ode_model.h
CMakeBased/startup/: startup_stm32h743zitx.s
STM32CubeIDE/: .cproject  .project  ACADOS-STM32 Debug.launch  ACADOS-STM32.ioc  STM32H743ZITX_FLASH.ld
STM32CubeIDE/Core/Inc/: main.h
STM32CubeIDE/Core/Src/: main.c  stm32h7xx_it.c
STM32CubeIDE/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
STM32CubeIDE/blasfeo/include/: blasfeo_target.h
STM32CubeIDE/c_generated_code/: acados_solver_pendulum_ode.h  main_pendulum_ode.c  main_sim_pendulum_ode.c
STM32CubeIDE/c_generated_code/pendulum_ode_model/: pendulum_ode_expl_ode_fun.c
